# Mtsme-projeto_scrapp_basis

./: README.adoc  README.md  compose.yaml  main.py  pyproject.toml  scrap.adoc
comum/: config.py  consumer.py  models.py  uc_driver.py
docker/sql/: 01.create-mattermost-db.sql  02.create-licitacao-db.sql
downloads_compra/: config.py  download_compra.py  main.py  mover_downloads.py  num_pregao.py  producer_arquivo.py  tratam_num_pregao.py
entradas_e_saidas/: Dockerfile  compose.yaml  entradas_e_saidas.adoc
entradas_e_saidas/diagramas/: diag_dc.d2  diag_ip.d2  diag_pa.d2  diag_pd.d2  diag_ps.d2  (+4 more)
info_pregao/: coletar_info.py  config.py  main.py  models.py  producer.py
mensagem_dlq/: config.py  consumer.py  main.py
mensagens_pregao/: Dockerfile  Dockerfile.undetected  notas.adoc  pyproject.toml  requirements.txt
propostas/: README.md  pyproject.toml
propostas/anexos/: config_arquivo.py  main.py  producer_arquivo.py  scraper_arquivo.py
propostas/dados_gerais/: config_dados.py  main.py  models.py  producer_dados.py  scraper.py  utils.py
propostas/status_licitante/: config_status.py  main.py  producer_status.py  scraper_status.py
quadro_informativo/: README.md  abrircontasgov.py  coletar_avisos.py  coletar_esclar.py  coletar_impug.py  config.py  licitacaoInfo.py  main.py  producer.py  pyproject.toml  quadro_info.py  tratam_avisos.py  tratam_impug.py  tratar_esclar.py
recursos/: README.md  pyproject.toml
testes/: abre_e_clica.py  comsumer_DR.py  config_dr.py  decisao_do_pregoeiro.py  main_DR.py  producer_dr.py  revisao_autoridade_competente.py
(+33 files in other folders)
