[project]
name = "scrapers-comprasnet"
version = "0.1.0"
description = "Scrapers do Portal Comprasnet"
readme = "README.adoc"
requires-python = ">=3.12"
dependencies = [
    "d2>=0.7",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rabbitpy>=2.0.1",
    "result>=0.17.0",
    "retry>=0.9.2",
    "selenium>=4.33.0",
    "setuptools>=80.9.0",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "undetected-chromedriver>=3.5.5",
]
